2006-04-01 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/SceneManagers/EmberPagingSceneManager/src/OgrePagingLandScapeRaySceneQuery.cpp: include the distance in the result so it can be sorted

2006-03-20 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/AvatarCamera.cpp, src/components/ogre/AvatarCamera.h, src/components/ogre/EntityWorldPickListener.cpp, src/components/ogre/EntityWorldPickListener.h, src/components/ogre/GUIManager.cpp, src/components/ogre/GUIManager.h, src/components/ogre/IWorldPickListener.h, src/components/ogre/Makefile.am, src/components/ogre/MousePicker.cpp, src/components/ogre/MousePicker.h, src/components/ogre/jesus/JesusMousePicker.cpp, src/components/ogre/scripting/bindings/lua/AvatarCamera.pkg, src/components/ogre/scripting/bindings/lua/EmberOgre.pkg, src/components/ogre/scripting/bindings/lua/GUIManager.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.cpp, src/components/ogre/widgets/EntityPicker.lua, src/components/ogre/widgets/JesusEdit.cpp: reworked how entity picking works. They new way is that the AvatarCamera does picking and calls a number of registered IWorldPickListener objects. These check to see what kind of object got picked and reacts accordingly. This allows developers to add new picking behaviour, for example being able to pick Carpenter objects, or picking and dragging Mercator basepoints.
    * src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h, src/components/ogre/WorldEmberEntity.cpp, src/components/ogre/WorldEmberEntity.h: added functionality for editing Mercator basepoints, so that the terrain can be changed

2006-03-19 Erik Hjortsberg  <erik@katastrof.nu>
